--- a/project/LDA code , formerly untitleled.ipynb
+++ b/project/LDA code , formerly untitleled.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lguillain/anaconda/lib/python3.6/site-packages/scipy/sparse/sparsetools.py:20: DeprecationWarning: `scipy.sparse.sparsetools` is deprecated!\n",
-      "scipy.sparse.sparsetools is a private module for scipy.sparse, and should not be used.\n",
-      "  _deprecated()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -572,6 +562,40 @@
     "de_dict = de_dict.map(lambda x:  ' '.join(x))\n",
     "en_dict = en_dict.map(lambda x:  ' '.join(x))\n",
     "fr_dict = fr_dict.map(lambda x:  ' '.join(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMatching(tweet_list, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                 [esper, 2016, meilleur, 2015, quand]\n",
+       "1                 [nice, bmw, ..., kill, ant, !, !, !]\n",
+       "2    [dageg, ,, beim, sauf, zuschau, ,, solang, pro...\n",
+       "3    [happi, new, jear, !, !, !, back, 2, week, cub...\n",
+       "4    [bon, anné, prend, beaucoup, plais, suivr, vid...\n",
+       "Name: tokenized, dtype: object"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['tokenized'].head()"
    ]
   },
   {
@@ -1212,14 +1236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'string With Punctuation  àéè   '"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#move this above\n",
     "import re\n",
     "s = \"string. With. Punctuation? ! àéè. : ; \"\n",
-    "s = re.sub(r'[^\\w\\s]','',s)"
+    "s = re.sub(r'[^\\w\\s]','',s)\n",
+    "s"
    ]
   },
   {
@@ -1302,21 +1338,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[(0,\n",
-       "  '0.027*\"assad\" + 0.022*\"syria\" + 0.019*\"stress\" + 0.010*\"ambassador\" + 0.007*\"afraid\" + 0.007*\"stop\" + 0.007*\"kill\" + 0.006*\"russia\" + 0.006*\"asylum\" + 0.005*\"addict\"'),\n",
+       "  '0.037*\"sad\" + 0.023*\"afraid\" + 0.020*\"stress\" + 0.018*\"dont\" + 0.013*\"it\" + 0.012*\"peopl\" + 0.009*\"like\" + 0.009*\"u\" + 0.008*\"time\" + 0.007*\"make\"'),\n",
        " (1,\n",
-       "  '0.094*\"sad\" + 0.017*\"im\" + 0.014*\"it\" + 0.012*\"make\" + 0.011*\"dont\" + 0.009*\"know\" + 0.009*\"day\" + 0.009*\"peopl\" + 0.009*\"afraid\" + 0.007*\"time\"'),\n",
+       "  '0.100*\"sad\" + 0.023*\"im\" + 0.017*\"play\" + 0.012*\"ambassador\" + 0.011*\"see\" + 0.010*\"make\" + 0.008*\"dont\" + 0.008*\"still\" + 0.007*\"night\" + 0.007*\"cant\"'),\n",
        " (2,\n",
-       "  '0.042*\"sad\" + 0.031*\"im\" + 0.019*\"stress\" + 0.015*\"addict\" + 0.014*\"afraid\" + 0.008*\"one\" + 0.007*\"get\" + 0.007*\"see\" + 0.007*\"go\" + 0.006*\"u\"')]"
+       "  '0.066*\"sad\" + 0.050*\"im\" + 0.017*\"afraid\" + 0.016*\"stress\" + 0.015*\"realli\" + 0.009*\"it\" + 0.009*\"that\" + 0.007*\"addict\" + 0.007*\"watch\" + 0.006*\"look\"'),\n",
+       " (3,\n",
+       "  '0.051*\"sad\" + 0.017*\"stress\" + 0.014*\"one\" + 0.012*\"addict\" + 0.012*\"go\" + 0.012*\"day\" + 0.009*\"get\" + 0.009*\"im\" + 0.008*\"it\" + 0.007*\"today\"'),\n",
+       " (4,\n",
+       "  '0.049*\"assad\" + 0.039*\"syria\" + 0.011*\"russia\" + 0.009*\"kill\" + 0.008*\"war\" + 0.007*\"asylum\" + 0.006*\"syrian\" + 0.005*\"year\" + 0.005*\"your\" + 0.005*\"stress\"')]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,11 +1367,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ldamodel.save('lda.model') #save lda model"
+    "#ldamodel =  models.LdaModel.load('lda.model') #retrive lda model"
    ]
   },
   {
@@ -1340,7 +1380,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ldamodel =  models.LdaModel.load('lda.model') #retrive lda model"
+    "sent_to_cluster = list()\n",
+    "for n,doc in enumerate(corpus):\n",
+    "    if doc:\n",
+    "        cluster = max(ldamodel[doc],key=lambda x:x[1])\n",
+    "        sent_to_cluster.append(cluster[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ldamodel.save('lda.model') #save lda model"
    ]
   },
   {
