Adding Tweet tokenizer to project, cleaning lda from useless data, adding POS/NEG to LDA creation

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -38,9 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -58,7 +56,8 @@
     "\n",
     "#Part 3\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem.snowball import SnowballStemmer"
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "from nltk.tokenize import word_tokenize, TweetTokenizer"
    ]
   },
   {
@@ -236,9 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "columns = ['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
@@ -546,9 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cleaned = json_normalize(data)\n",
@@ -572,9 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cleaned = cleaned[['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
@@ -620,9 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lang_mask = ~cleaned.lang.isin(['de', 'en', 'fr'])\n",
@@ -647,9 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sent_mask = (cleaned['sentiment'] == 'POSITIVE')\n",
@@ -681,9 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "spam_mask = (cleaned['source_spam_probability'] >= 0.5)\n",
@@ -746,9 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data_cleaning = lambda data: unicodedata.normalize('NFD', data.lower()).encode('ascii', 'ignore').decode('utf-8')"
@@ -796,12 +781,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned['main'] = cleaned['main'].str.replace(\"@\\S+\", '')"
+    "cleaned['main'] = cleaned['main'].str.replace(r\"@\\S+\", '')"
    ]
   },
   {
@@ -817,7 +800,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned['main'] = cleaned['main'].str.replace(r'[^\\w\\s]', '')\n",
+    "cleaned['main'] = cleaned['main'].str.replace(r'[^\\w\\s]', ' ')\n",
     "cleaned.main.head()"
    ]
   },
@@ -864,8 +847,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tknzr = TweetTokenizer()\n",
+    "\n",
     "cleaned['tweets'] = cleaned['main'] #keep tweets for later\n",
-    "cleaned['main'] = cleaned['main'].str.split()\n",
+    "tokenized = cleaned['main'].map(lambda x: tknzr.tokenize(x))\n",
     "cleaned.head()"
    ]
   },
@@ -886,9 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def remove_stops(language, df, *col):\n",
@@ -1009,9 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "en_dict = dictionaries['english'].dropna()\n",
@@ -1029,9 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "en_dict = en_dict.apply(data_cleaning).str.split()\n",
@@ -1069,9 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "stem_words('english', en_dict)\n",
@@ -1132,9 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cleaned.main = cleaned.main.map(lambda x:  ' '.join(x))\n",
@@ -1153,9 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def check_dict(tweet, dict_):\n",
@@ -1446,7 +1419,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1460,7 +1433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
