Adding gitignore, other file changes

--- a/project/Temporal Analysis & geolocation.ipynb
+++ b/project/Temporal Analysis & geolocation.ipynb
@@ -15,7 +15,8 @@
     "import unicodedata\n",
     "\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem.snowball import SnowballStemmer"
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "import pickle"
    ]
   },
   {
@@ -32,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json('tweets.json', lines=True)"
+    "df = pickle.load( open( \"french_keyworded_tweets.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -42,15 +43,6 @@
    "outputs": [],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['published'] = pd.to_datetime(df['published'])"
    ]
   },
   {
@@ -71,9 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neg = get_time_distribution(df[df.sentiment == 'NEGATIVE']['published'])\n",
-    "neut = get_time_distribution(df[df.sentiment == 'NEUTRAL']['published'])\n",
-    "pos = get_time_distribution(df[df.sentiment == 'POSITIVE']['published'])"
+    "english = df[(~df['keywords'].isnull())]"
    ]
   },
   {
@@ -82,11 +72,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(neg)\n",
-    "#plt.plot(neut)\n",
-    "plt.plot(pos)\n",
-    "#plt.legend(['negative', 'neutral', 'positive'])\n",
-    "plt.show()"
+    "english[english.keywords.map(lambda x: len(x) > 0)].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "english[english.keywords.map(lambda x: len(x) > 0)][['main', 'sentiment', 'author_gender', 'keywords']].sample(1000).to_csv('new_french.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depressed = english[english.keywords.map(lambda x: len(x) > 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_daily(depressed):\n",
+    "    neg = get_time_distribution(depressed[depressed.sentiment == 'NEGATIVE']['published'])\n",
+    "    neut = get_time_distribution(depressed[depressed.sentiment == 'NEUTRAL']['published'])\n",
+    "    pos = get_time_distribution(depressed[depressed.sentiment == 'POSITIVE']['published'])\n",
+    "\n",
+    "    plt.plot(neg)\n",
+    "    plt.plot(neut)\n",
+    "    plt.plot(pos)\n",
+    "    plt.legend(['negative', 'neutral', 'positive'])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_daily(depressed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_daily(depressed)"
    ]
   },
   {
