--- a/project/dataset2_exploration.ipynb
+++ b/project/dataset2_exploration.ipynb
@@ -731,9 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "AttributeError",
@@ -755,9 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -824,9 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -899,9 +893,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -913,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
