--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -1265,12 +1265,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "german_filtered = cleaned[cleaned.lang == 'de']['tweets']\\\n",
     "[cleaned[cleaned.lang == 'de']['main'].map(lambda x: check_dict(x, de_dict))]\n",
@@ -1296,6 +1294,53 @@
     "The remaining number is quite small, compared to the initial 4000 german tweets in the dataset, but it is a number we migth expect.\n",
     "\n",
     "Still those results could be better, which is why we decide to introduce a step 4 into our analysis:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mapping from Dataset 1 to Dataset 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Formatting is as follows: **Column in Dataset 2** -> Column in Dataset 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **author_user_id**           -> userId\n",
+    "- **geo_point**                -> longitude + latitude (or: placeLongitude + placeLatitude)\n",
+    "- **main**                     -> text\n",
+    "- **published**                -> createdAt\n",
+    "- **source_followers**         -> followersCount\n",
+    "- **source_following**         -> friendsCount (or is it folowwers that are following ?)\n",
+    "- **source_location**          -> userLocation\n",
+    "\n",
+    "\n",
+    "#### Dataset 1 having no equivalent : \n",
+    "- id                                -> tweet ID\n",
+    "- truncated                         -> no idea, only NaNs\n",
+    "- placeId                           -> ID of where they are\n",
+    "- inReplyTo                         -> If it is a tweet reply\n",
+    "- source & sourceName, sourceUrl    -> what user used to send tweet (Android, website, and so on)\n",
+    "- userName                          -> username\n",
+    "- screenName                        -> name shown on tweets from username\n",
+    "- statusesCount                     -> number of status of user\n",
+    "\n",
+    "#### Dataset 2 having no equivalent : \n",
+    "- **author_gender**                 -> author's gender\n",
+    "- **lang**                          -> language of tweet (given)\n",
+    "- **sentiment**                     -> tweet's sentiment analysis (given)\n",
+    "- **source_spam_probability**       -> spam probability of tweet (given)\n",
+    "- **tags**                          -> hashtags contained in the tweet (in Dataset 1 stays in text)\n",
+    "- **tokenized**                     -> tokenized text of tweet (done by us)\n",
+    "- **keywords**                      -> keywords fund in tweets (done by us)"
    ]
   },
   {
@@ -1538,7 +1583,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1552,7 +1597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
