Correct import error

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -59,6 +59,7 @@
     "from pandas.io.json import json_normalize\n",
     "\n",
     "#Part 2\n",
+    "import re\n",
     "import unicodedata\n",
     "\n",
     "#Part 3\n",
