--- a/project/LDA code , formerly untitled.ipynb
+++ b/project/LDA code , formerly untitled.ipynb
@@ -129,7 +129,16 @@
    },
    "outputs": [],
    "source": [
-    "ldamodel = models.LdaModel.load('general_lda_en.model') #retrive lda model"
+    "ldamodel = models.LdaModel.load('models/general_lda_ennegative_neutral.model') #retrive lda model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ldamodel.show_topics(num_topics=20)"
    ]
   },
   {
