--- a/project/Temporal Analysis & geolocation.ipynb
+++ b/project/Temporal Analysis & geolocation.ipynb
@@ -22,6 +22,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_time_distribution(times):\n",
+    "    publishing_time = times.map(lambda x: x.hour).value_counts() / times.count()\n",
+    "    publishing_time.sort_index(inplace=True)\n",
+    "    return publishing_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_daily(depressed):\n",
+    "    neg = get_time_distribution(depressed[depressed.sentiment == 'NEGATIVE']['published'])\n",
+    "    neut = get_time_distribution(depressed[depressed.sentiment == 'NEUTRAL']['published'])\n",
+    "    pos = get_time_distribution(depressed[depressed.sentiment == 'POSITIVE']['published'])\n",
+    "\n",
+    "    plt.plot(neg)\n",
+    "    plt.plot(neut)\n",
+    "    plt.plot(pos)\n",
+    "    plt.legend(['negative', 'neutral', 'positive'])\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pickle.load( open( \"french_keyworded_tweets.pkl\", \"rb\" ))"
+    "df = pickle.load( open( \"keyword_frames/english_keyworded_tweets.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -49,20 +79,6 @@
    "outputs": [],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_time_distribution(times):\n",
-    "    publishing_time = times.map(lambda x: x.hour).value_counts() / times.count()\n",
-    "    publishing_time.sort_index(inplace=True)\n",
-    "    return publishing_time"
    ]
   },
   {
@@ -91,12 +107,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "english[english.keywords.map(lambda x: len(x) > 0)][['main', 'sentiment', 'author_gender', 'keywords']].sample(1000).to_csv('new_french.csv')"
+    "plot_daily(english)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sad = english[english.keywords.map(lambda x: len(x) > 0)]"
    ]
   },
   {
@@ -107,7 +131,10 @@
    },
    "outputs": [],
    "source": [
-    "depressed = english[english.keywords.map(lambda x: len(x) > 1)]"
+    "get_time_distribution(sad.published).plot()\n",
+    "get_time_distribution(english.published).plot()#not usefull \n",
+    "plt.legend(['sad', 'general'])\n",
+    "plt.show()"
    ]
   },
   {
@@ -118,16 +145,18 @@
    },
    "outputs": [],
    "source": [
-    "def plot_daily(depressed):\n",
-    "    neg = get_time_distribution(depressed[depressed.sentiment == 'NEGATIVE']['published'])\n",
-    "    neut = get_time_distribution(depressed[depressed.sentiment == 'NEUTRAL']['published'])\n",
-    "    pos = get_time_distribution(depressed[depressed.sentiment == 'POSITIVE']['published'])\n",
-    "\n",
-    "    plt.plot(neg)\n",
-    "    plt.plot(neut)\n",
-    "    plt.plot(pos)\n",
-    "    plt.legend(['negative', 'neutral', 'positive'])\n",
-    "    plt.show()"
+    "sad_people = sad.author_gender.value_counts() / sad.author_gender.count()\n",
+    "sad_people"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_people = english.author_gender.value_counts()/ english.author_gender.count()\n",
+    "all_people"
    ]
   },
   {
@@ -138,7 +167,10 @@
    },
    "outputs": [],
    "source": [
-    "plot_daily(depressed)"
+    "all_people.iloc[1:].plot(kind='bar')\n",
+    "plt.figure()\n",
+    "sad_people.iloc[1:].plot(kind='bar')\n",
+    "plt.show()"
    ]
   },
   {
@@ -149,7 +181,8 @@
    },
    "outputs": [],
    "source": [
-    "plot_daily(depressed)"
+    "sentiment_s = sad.sentiment.value_counts() / sad.sentiment.count()\n",
+    "sentiment_s"
    ]
   },
   {
@@ -200,7 +233,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How the f are we supposed to deal with such an unequally distribued dataset????"
+    "How the f are we supposed to deal with such an unequally distribued dataset????\n",
+    "-> we do this by working on the big dataset."
    ]
   },
   {
@@ -312,6 +346,43 @@
    "outputs": [],
    "source": [
     "swiss_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_points = df.geo_point.value_counts().reset_index()\n",
+    "aggregated_points.columns = ['geo_point', 'count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "location = process_location_data(aggregated_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ag_map = build_map(location=location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ag_map"
    ]
   }
  ],
