--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -22,8 +22,9 @@
     "\n",
     "<ol start=\"0\">\n",
     "  <li><b>Data Collection:</b> how we accessed the datasets</li>\n",
-    "  <li><b>Datasets Description:</b> a first look at the datasets</li>\n",
+    "  <li><b>First Data Exploration:</b> a first look at the dataset</li>\n",
     "  <li><b>Data Treatment:</b> cleaning based on the results found in <i>Part 1</i> and applying NLP methods to our data</li>\n",
+    "  <li><b>Datasets Description:</b> an analysis of the general dataset</li>\n",
     "  <li><b>Dictionary Construction:</b> creation of the dictionary we are going to us on the datasets</li>\n",
     "  <li><b>Topic Modeling and Analysis of First Dataset:</b> anaysis of the smaller Spinn3r set for a proof of concept</li>\n",
     "  <li><b>Analysis of the Second Dataset:</b> applying what we learned on the smaller dataset on the swisscom-twitter dataset</li>\n",
@@ -78,26 +79,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We did not retrieve both datasets using the same method, as they did not have the same weight, but also because they were not provided on the same platforms."
+    "The complete twitter data for both datsets was collected from the cluster provided in the class."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our first dataset (_**twitter-swisscom**_) was retrieved from a .zip file. Thus, we had access to the entire dataset quickly allowing us to have an overview of all the tweets when analyzing it (cf _Part 1_ below)."
+    "An example dataset of (_**twitter-swisscom**_) was retrieved from a .zip file provided. $bullshit$ $ahead->$ Thus, we had access to the entire dataset quickly allowing us to have an overview of all the tweets when analyzing it (cf _Part 1_ below). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our second dataset (_**Spinn3r**_), however, was retrieved from the cluster. We first tried to retrieve the whole dataset but quickly realized it would be impossible to do so (it was very heavy and took a long time to be downloaded). Thus, we only extracted the first JSON file to perform our analysis. To do this, we used the following methods:\n",
+    "Our second dataset (_**Spinn3r**_), however, did not provide a specific example datset. As a standing we extracted the first JSON file to perform our analysis. To do this, we used the following comands after connecting to the cluster:\n",
     "\n",
     "```bash\n",
     "cluster$ hadoop fs -getmerge /datasets/swiss-tweet/harvest3r_twitter_data_01-01_0.json /buffer/example.json\n",
     "local$ scp -r gaspar@iccluster060.iccluster.epfl.ch:/buffer/example.json <local-path>\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The complete datsets where obtained by running a pysprak script on the cluster, which removes unwanted tweets from the dataset before downloading them into a json file.\n",
+    "The respective script for each cluster can be found in the X folder."
    ]
   },
   {
@@ -619,19 +628,6 @@
    "source": [
     "spam_mask = (cleaned['source_spam_probability'] >= 0.5)\n",
     "cleaned.drop(cleaned[spam_mask].index, inplace=True)\n",
-    "cleaned.reset_index(drop=True, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sent_mask = (cleaned['sentiment'] == 'POSITIVE')\n",
-    "cleaned.drop(cleaned[sent_mask].index, inplace=True)\n",
     "cleaned.reset_index(drop=True, inplace=True)"
    ]
   },
@@ -1426,7 +1422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1440,7 +1436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
